--- a/src/Dotnet9.RazorPages/Pages/AI.cshtml
+++ b/src/Dotnet9.RazorPages/Pages/AI.cshtml
@@ -1,8 +1,8 @@
 ﻿@page "/ai"
 
-@inject ISystemService SystemService
+@inject ISystemClientService SystemClientService
 @{
-    var siteInfo = await SystemService.GetSiteInfoAsync();
+    var siteInfo = await SystemClientService.GetSiteInfoAsync();
     Layout = "Shared/_CustomLayout";
     ViewData[ViewDataKeys.Title] = "Token AI";
 }
