--- a/src/Dotnet9.RazorPages/Pages/Abouts/Index.cshtml
+++ b/src/Dotnet9.RazorPages/Pages/Abouts/Index.cshtml
@@ -1,11 +1,9 @@
 ﻿@page "/about"
-@inject ISystemService SystemService
 @model Dotnet9.RazorPages.Pages.Abouts.IndexModel
 @{
-    var siteInfo = await SystemService.GetSiteInfoAsync();
     ViewData[ViewDataKeys.Title] = $"关于";
-    ViewData[ViewDataKeys.Keywords] = siteInfo?.Keywords;
-    ViewData[ViewDataKeys.Description] = siteInfo?.Description;
+    ViewData[ViewDataKeys.Keywords] = Model.SiteInfo?.Keywords;
+    ViewData[ViewDataKeys.Description] = Model.SiteInfo?.Description;
 }
 
 @await Html.PartialAsync("_MarkdownHeader")
