--- a/src/Dotnet9.RazorPages/Pages/Albums/Index.cshtml
+++ b/src/Dotnet9.RazorPages/Pages/Albums/Index.cshtml
@@ -1,10 +1,9 @@
 ﻿@page "/albums"
 
-@inject ICaller Caller
+@model IndexModel
 @{
     var title = "专辑";
     var description = "专辑是将一系列相关主题的文章进行分类整理，形成一个专辑。";
-    var albumList = await Caller.GetAsync<List<AlbumBrief>>("/api/albums/brief");
     ViewData[ViewDataKeys.Title] = title;
     ViewData[ViewDataKeys.Keywords] = description;
     ViewData[ViewDataKeys.Description] = description;
@@ -16,7 +15,7 @@
 
 <div id="view-content" class="gap-solid"></div>
 
-@if (albumList?.Any() != true)
+@if (Model.AlbumList?.Any() != true)
 {
     <div class="read_more">
         这里空空如也
@@ -26,7 +25,7 @@ else
 {
     <div class="blog_list">
         <ul>
-            @foreach (var album in albumList)
+            @foreach (var album in Model.AlbumList)
             {
                 <li>
                     <a href="albums/@album.Slug" class="blog_more">
