--- a/src/Dotnet9.RazorPages/Pages/Shared/_LeftNavigation.cshtml
+++ b/src/Dotnet9.RazorPages/Pages/Shared/_LeftNavigation.cshtml
@@ -1,14 +1,16 @@
-﻿@inject ICaller Caller
+﻿@inject CategoryService CategoryService
+
 @{
-    var categoryBriefs = await Caller.GetAsync<List<CategoryBrief>>("/api/categories/brief");
+    var categories = await CategoryService.GetBriefAsync();
 }
+
 <nav>
     <div class="topnav">
         <ul id="starlist">
-            @if (categoryBriefs?.Count > 0)
+            @if (categories?.Count > 0)
             {
                 <li class="group">文章分类</li>
-                @foreach (var cat in categoryBriefs)
+                @foreach (var cat in categories)
                 {
                     <li>
                         <a title="@cat.Description" href="/categories/@cat.Slug">@cat.Name (@cat.BlogCount)</a>
