--- a/src/Dotnet9.RazorPages/Pages/Timelines/Index.cshtml
+++ b/src/Dotnet9.RazorPages/Pages/Timelines/Index.cshtml
@@ -1,11 +1,9 @@
 ﻿@page "/timelines"
 
-@inject ICaller Caller
+@model IndexModel
 @{
     var title = "时间轴";
     var description = "时间轴可以让用户更好地了解网站的历史和发展，也可以让用户更好地浏览网站的内容。此外，时间轴还可以让用户更好地了解网站的主题和方向，从而更好地了解网站的价值和意义。因此，时间轴是一个非常有用的功能，可以提高用户对个人博客网站的兴趣和参与度。";
-    var timelines = await Caller.GetAsync<List<TimelineDto>>(
-        $"/api/timelines");
     ViewData[ViewDataKeys.Title] = title;
     ViewData[ViewDataKeys.Keywords] = title;
     ViewData[ViewDataKeys.Description] = description;
@@ -20,9 +18,9 @@
     <h1>时间轴</h1>
     <p>@description</p>
 
-    @if (timelines?.Any() == true)
+    @if (Model.Timelines?.Any() == true)
     {
-        @foreach (var groupYearAndMonth in timelines.GroupBy(x => x.Time.ToString("yyyy年MM月")).OrderByDescending(x => x.Key))
+        @foreach (var groupYearAndMonth in Model.Timelines.GroupBy(x => x.Time.ToString("yyyy年MM月")).OrderByDescending(x => x.Key))
         {
             <h2 class="m-0 time-show-name">@groupYearAndMonth.Key</h2>
             @foreach (var timeline in groupYearAndMonth)
