--- a/src/Dotnet9.RazorPages/Pages/_ViewImports.cshtml
+++ b/src/Dotnet9.RazorPages/Pages/_ViewImports.cshtml
@@ -1,7 +1,6 @@
 ﻿@using Dotnet9.RazorPages
 @namespace Dotnet9.RazorPages.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
-@using Dotnet9.RazorPages.Common
 @using Dotnet9.Contracts.Dto
 @using Dotnet9.Contracts.Dto.Albums
 @using Dotnet9.Contracts.Dto.Categories
@@ -12,3 +11,6 @@
 @using System.Net
 @using Dotnet9.Contracts.Dto.Timelines
 @using Dotnet9.Caller.Services.Systems
+
+@using Dotnet9.RazorPages.Consts
+@using Dotnet9.RazorPages.Models
