--- a/src/Dotnet9.RazorPages/Pages/Categories/Index.cshtml
+++ b/src/Dotnet9.RazorPages/Pages/Categories/Index.cshtml
@@ -11,4 +11,4 @@
 
 <div id="view-content" class="gap-solid"></div>
 
-@await Html.PartialAsync("_PaginationPartial", new PaginationModel(Model.Blogs, $"/categories/{Model.Slug}", Model.Current, Model.Pages, Model.RequestResponse!.Total, Model.PageSize, Model.RequestResponse.TotalPage))
+@await Html.PartialAsync("_PaginationPartial", new PaginationModel(Model.Blogs, $"/categories/{Model.Slug}?", Model.Current, Model.Pages, Model.RequestResponse!.Total, Model.PageSize, Model.RequestResponse.TotalPage))
