--- a/src/Dotnet9.RazorPages/Pages/Shared/_BlogsSidebar.cshtml
+++ b/src/Dotnet9.RazorPages/Pages/Shared/_BlogsSidebar.cshtml
@@ -1,6 +1,6 @@
 ﻿@model BlogsSidebarModel
 
-<div class="hot_news">
+<div class="tj_news">
     <div class="side_title">
         <h3>@Model.GroupName</h3>
     </div>
@@ -9,9 +9,9 @@
         @foreach (var blog in @Model.Blogs)
         {
             <li>
-                <a href="@blog.CreationTime.ToString("/yyyy/MM")/@blog.Slug">
-                    <p>@blog.Title</p>
-                </a><span>@blog.ViewCount</span>
+                <a href="@blog.CreationTime.ToString("/yyyy/MM")/@blog.Slug" title="@blog.Title">
+                    <p>(<span>@blog.ViewCount</span>)@blog.Title</p>
+                </a>
             </li>
         }
     </ul>
