--- a/src/Dotnet9.RazorPages/Pages/Shared/_Layout.cshtml
+++ b/src/Dotnet9.RazorPages/Pages/Shared/_Layout.cshtml
@@ -25,7 +25,7 @@
     <script src="/js/swiper.min.js"></script>
     @await RenderSectionAsync("Headers", false)
 </head>
-<body>
+<body class="background">
 
 @await Html.PartialAsync("_HeaderPartial")
 
