--- a/src/Dotnet9.RazorPages/wwwroot/css/base.css
+++ b/src/Dotnet9.RazorPages/wwwroot/css/base.css
@@ -31,7 +31,7 @@ article { width: 1280px; margin: 120px auto 0; overflow: hidden }
 .is-fixed { top: 120px; z-index: 99; }
 /*header*/
 header { height: 85px; margin-bottom: 20px; border-bottom: 1px solid #e8e8e8; position: fixed; width: 100%; top: 0; background: #fff; z-index: 9999; }
-.topbar { width: 1280px; margin: auto; padding: 20px 0; overflow: hidden; }
+.topbar { width: 1280px; margin: auto; display: flex; padding: 20px 0; overflow: hidden; overflow-x: scroll;}
 .logo {
     float: left;
     line-height: 44px;
@@ -60,6 +60,7 @@ header { height: 85px; margin-bottom: 20px; border-bottom: 1px solid #e8e8e8; po
     display: inline-block;
     margin-left: 20px;
     font-size: 20px;
+    white-space: nowrap;
 }
 
 .header-menu a {
