--- a/src/Dotnet9.RazorPages/Pages/_ViewImports.cshtml
+++ b/src/Dotnet9.RazorPages/Pages/_ViewImports.cshtml
@@ -14,3 +14,5 @@
 
 @using Dotnet9.RazorPages.Consts
 @using Dotnet9.RazorPages.Models
+@using System.Runtime.InteropServices
+@using System.Reflection
