--- a/src/Dotnet9.RazorPages/Pages/Shared/_HeaderPartial.cshtml
+++ b/src/Dotnet9.RazorPages/Pages/Shared/_HeaderPartial.cshtml
@@ -21,7 +21,7 @@
         </span>
         <span class="header-menu">
             <a href="/donation" title="这是爱的力量">
-                <div class="badge">打赏<span class="count">爱心</span></div>
+                <div class="badge">赞助<span class="count">比心</span></div>
             </a>
         </span>
         <span class="header-menu">
