--- a/src/Dotnet9.BlazorWebApp/_Imports.razor
+++ b/src/Dotnet9.BlazorWebApp/_Imports.razor
@@ -7,3 +7,12 @@
 @using Microsoft.JSInterop
 @using Dotnet9.BlazorWebApp
 @using Dotnet9.BlazorWebApp.Shared
+@using Dotnet9.Caller.Services.Blogs
+@using Dotnet9.Caller.Services.Categories
+@using Dotnet9.Contracts.Dto.Categories
+@using Dotnet9.Contracts.Dto.Blogs
+@using Dotnet9.BlazorWebApp.Models
+@using Dotnet9.Caller.Services.Links
+@using System.Runtime.InteropServices
+@using System.Reflection
+@using Dotnet9.Contracts.Dto.FriendlyLinks
