--- a/src/Dotnet9.RazorPages/Pages/_ViewImports.cshtml
+++ b/src/Dotnet9.RazorPages/Pages/_ViewImports.cshtml
@@ -1,6 +1,13 @@
 ﻿@using Dotnet9.RazorPages
 @namespace Dotnet9.RazorPages.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@using System.Net.Http
+@using System.Net.Http.Json
+@using Microsoft.AspNetCore.Components.Forms
+@using Microsoft.AspNetCore.Components.Routing
+@using Microsoft.AspNetCore.Components.Web
+@using Microsoft.AspNetCore.Components.Web.Virtualization
+@using Microsoft.JSInterop
 @using Dotnet9.Contracts.Dto
 @using Dotnet9.Contracts.Dto.Albums
 @using Dotnet9.Contracts.Dto.Categories
