add timestamp tool;

--- a/src/Dotnet9.RazorPages/Pages/Shared/_CustomLayout.cshtml
+++ b/src/Dotnet9.RazorPages/Pages/Shared/_CustomLayout.cshtml
@@ -18,5 +18,18 @@
 
 @RenderBody()
 
+    <environment names="Production">
+        <script>
+            var _hmt = _hmt || [];
+            (function () {
+                var hm = document.createElement("script");
+                hm.src = "https://hm.baidu.com/hm.js?b1c5c62f256893710ae912468261bf6b";
+                var s = document.getElementsByTagName("script")[0];
+                s.parentNode.insertBefore(hm, s);
+            })();
+        </script>
+        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8748951917303002"
+                crossorigin="anonymous"></script>
+    </environment>
 </body>
 </html>
