--- a/src/Dotnet9.RazorPages/Pages/Shared/_Layout.cshtml
+++ b/src/Dotnet9.RazorPages/Pages/Shared/_Layout.cshtml
@@ -24,12 +24,14 @@
     <script src="/js/comm.js"></script>
     <!-- Swiper JS -->
     <script src="/js/swiper.min.js"></script>
-    <link href="BlazorApp1.styles.css" rel="stylesheet"/>
-    <script src="_framework/blazor.server.js"></script>
+    <link href="Dotnet9.RazorPages.styles.css" rel="stylesheet"/>
     <base href="~/" />
-    <component type="typeof(Microsoft.AspNetCore.Components.Web.HeadOutlet)" 
+    <link href="_content/Masa.Blazor/css/masa-blazor.min.css" rel="stylesheet" />
+    <link href="https://cdn.masastack.com/npm/@("@mdi")/font@7.1.96/css/materialdesignicons.min.css" rel="stylesheet">
+    <script src="_framework/blazor.server.js"></script>
+    <script src="_content/BlazorComponent/js/blazor-component.js"></script>
+    <component type="typeof(HeadOutlet)" 
                render-mode="ServerPrerendered" />
-    <component type="typeof(App)" render-mode="ServerPrerendered" />
     @await RenderSectionAsync("Headers", false)
 </head>
 <body class="background">
