--- a/src/Dotnet9.RazorPages/Pages/_Imports.razor
+++ b/src/Dotnet9.RazorPages/Pages/_Imports.razor
@@ -1,2 +1,5 @@
 ﻿@using System.Reflection
 @using System.Runtime.InteropServices
+@using BlazorComponent
+@using Masa.Blazor
+@using Masa.Blazor.Presets
