--- a/src/Dotnet9.RazorPages/Pages/Shared/HeaderPartial.razor
+++ b/src/Dotnet9.RazorPages/Pages/Shared/HeaderPartial.razor
@@ -7,6 +7,9 @@
             <a href="/albums" title="专辑">专辑</a>
         </span>
         <span class="header-menu">
+            <a href="/tools" title="工具箱">工具箱</a>
+        </span>
+        <span class="header-menu">
             <a href="/tags" title="标签云">标签云</a>
         </span>
         <span class="header-menu">
