--- a/src/Dotnet9.RazorPages/Pages/Shared/_PaginationPartial.cshtml
+++ b/src/Dotnet9.RazorPages/Pages/Shared/_PaginationPartial.cshtml
@@ -13,7 +13,7 @@
     var pages = PagerHelper.CalcPages(Model.PageCount, 10, Model.Current);
 }
 
-@if (Model.Blogs == null || Model.Blogs.Count <= 0)
+@if (Model.Blogs is not {Count: > 0 })
 {
     <div class="read_more">
         这里空空如也
