--- a/src/Dotnet9.RazorPages/Pages/Shared/FooterPartial.razor
+++ b/src/Dotnet9.RazorPages/Pages/Shared/FooterPartial.razor
@@ -50,44 +50,44 @@
         <li>
             <a href="/about" title="关于博主">
                 <i class="icon_ab">
-                    <img src="~/images/ft_about.png" alt="">
+                    <img src="images/ft_about.png" alt="">
                 </i>
             </a>
         </li>
         <li>
             <a title="在线留言">
                 <i class="icon_wx">
-                    <img src="~/images/ft_ewm.png" alt="">
+                    <img src="images/ft_ewm.png" alt="">
                 </i>
                 <span>
-                    <img src="~/images/wechatpublic1.jpg" alt="快乐玩转技术微信公众号">
+                    <img src="images/wechatpublic1.jpg" alt="快乐玩转技术微信公众号">
                 </span>
             </a>
         </li>
         <li>
             <a title="个人微信">
                 <i class="icon_wx">
-                    <img src="~/images/ft_ewm.png" alt="">
+                    <img src="images/ft_ewm.png" alt="">
                 </i>
                 <span>
-                    <img src="~/images/wechatowner.jpg" alt="微信">
+                    <img src="images/wechatowner.jpg" alt="微信">
                 </span>
             </a>
         </li>
         <li>
             <a title="微信公众号">
                 <i class="icon_wx">
-                    <img src="~/images/ft_ewm.png" alt="">
+                    <img src="images/ft_ewm.png" alt="">
                 </i>
                 <span>
-                    <img src="~/images/wechatpublic.jpg" alt="Dotnet9微信公众号">
+                    <img src="images/wechatpublic.jpg" alt="Dotnet9微信公众号">
                 </span>
             </a>
         </li>
         <li>
             <a href="#" class="icon-top" title="返回顶部">
                 <i class="icon_fh">
-                    <img src="~/images/ft_top.png" alt="">
+                    <img src="images/ft_top.png" alt="">
                 </i>
             </a>
         </li>
