--- a/src/Dotnet9.RazorPages/Pages/Shared/LeftNavigation.razor
+++ b/src/Dotnet9.RazorPages/Pages/Shared/LeftNavigation.razor
@@ -1,15 +1,11 @@
 ﻿@inject CategoryService CategoryService
 
-@{
-    var categories = await CategoryService.GetBriefAsync();
-}
-
 <nav>
     <div class="topnav">
         <ul id="starlist">
-            @if (categories?.Count > 0)
+            @if (_categories?.Count > 0)
             {
-                @foreach (var cat in categories)
+                @foreach (var cat in _categories)
                 {
                     <li>
                         <a title="@cat.Description" href="/categories/@cat.Slug">@cat.Name (@cat.BlogCount)</a>
@@ -19,3 +15,13 @@
         </ul>
     </div>
 </nav>
+
+@code {
+    List<CategoryBrief>? _categories;
+
+    protected override async Task OnInitializedAsync()
+    {
+        _categories = await CategoryService.GetBriefAsync();
+    }
+
+}
