--- a/src/Dotnet9.RazorPages/Pages/Shared/TopKeywordsSidebar.razor
+++ b/src/Dotnet9.RazorPages/Pages/Shared/TopKeywordsSidebar.razor
@@ -1,10 +1,6 @@
 ﻿@inject BlogService BlogService
 
-@{
-    var keywords = await BlogService.GetTopKeywordsAsync();
-}
-
-@if (keywords?.Any() == true)
+@if (_keywords?.Any() == true)
 {
     <div class="tags">
         <div class="side_title">
@@ -12,7 +8,7 @@
         </div>
 
         <ul>
-            @foreach (var searchCount in keywords)
+            @foreach (var searchCount in _keywords)
             {
                 <li>
                     <a href="?keywords=@searchCount.Keywords">@searchCount.Keywords (@searchCount.Count)</a>
@@ -20,4 +16,14 @@
             }
         </ul>
     </div>
+}
+
+@code
+{
+    List<BlogSearchCountDto>? _keywords;
+
+    protected override async Task OnInitializedAsync()
+    {
+        _keywords = await BlogService.GetTopKeywordsAsync();
+    }
 }
