--- a/src/Dotnet9.RazorPages/Pages/Shared/_Layout.cshtml
+++ b/src/Dotnet9.RazorPages/Pages/Shared/_Layout.cshtml
@@ -5,8 +5,11 @@
 @{
     var siteInfo = await SystemClientService.GetSiteInfoAsync();
     var recommendBlogs = await BlogService.GetRecommendAsync();
+    var recommendModel = new BlogsSidebarModel(" 站长推荐", recommendBlogs);
     var weekHotBlog = await BlogService.GetWeekHotAsync();
+    var weekHotModel = new BlogsSidebarModel("本周排行", weekHotBlog);
     var historyHotBlog = await BlogService.GetHistoryHotAsync();
+    var historyHotModel = new BlogsSidebarModel("历史排行", historyHotBlog);
 }
 
 <!doctype html>
@@ -24,42 +27,42 @@
     <script src="/js/comm.js"></script>
     <!-- Swiper JS -->
     <script src="/js/swiper.min.js"></script>
-    <base href="~/" />
-    <link href="_content/Masa.Blazor/css/masa-blazor.min.css" rel="stylesheet" />
+    <base href="~/"/>
+    <link href="_content/Masa.Blazor/css/masa-blazor.min.css" rel="stylesheet"/>
     <link href="https://cdn.masastack.com/npm/@("@mdi")/font@7.1.96/css/materialdesignicons.min.css" rel="stylesheet">
     <script src="_framework/blazor.server.js"></script>
     <script src="_content/BlazorComponent/js/blazor-component.js"></script>
-    <component type="typeof(HeadOutlet)" 
-               render-mode="ServerPrerendered" />
+    <component type="typeof(HeadOutlet)"
+               render-mode="ServerPrerendered"/>
     @await RenderSectionAsync("Headers", false)
 </head>
 <body class="background">
 
-<component type="typeof(HeaderPartial)" render-mode="ServerPrerendered"/>
+<component type="typeof(HeaderPartial)" render-mode="WebAssemblyPrerendered"/>
 
 <article>
-    @await Html.PartialAsync("_LeftNavigation")
+    <component type="typeof(LeftNavigation)" render-mode="WebAssemblyPrerendered"/>
     <div class="box_l">
         @RenderBody()
     </div>
     <div class="box_r">
-        @await Html.PartialAsync("_TopKeywordsSidebar")
+        <component type="typeof(TopKeywordsSidebar)" render-mode="WebAssemblyPrerendered"/>
         @if (recommendBlogs?.Any() == true)
         {
-            @await Html.PartialAsync("_BlogsSidebar", new BlogsSidebarModel("站长推荐", recommendBlogs))
+            <component type="typeof(BlogSideBar)" render-mode="WebAssemblyPrerendered" param-Model="@recommendModel"/>
         }
         @if (weekHotBlog?.Any() == true)
         {
-            @await Html.PartialAsync("_BlogsSidebar", new BlogsSidebarModel("本周排行", weekHotBlog))
+            <component type="typeof(BlogSideBar)" render-mode="WebAssemblyPrerendered" param-Model="@weekHotModel"/>
         }
         @if (historyHotBlog?.Any() == true)
         {
-            @await Html.PartialAsync("_BlogsSidebar", new BlogsSidebarModel("历史排行", historyHotBlog))
+            <component type="typeof(BlogSideBar)" render-mode="WebAssemblyPrerendered" param-Model="@historyHotModel"/>
         }
     </div>
 </article>
 
-<component type="typeof(FooterPartial)" render-mode="ServerPrerendered"/>
+<component type="typeof(FooterPartial)" render-mode="WebAssemblyPrerendered"/>
 
 
 @await RenderSectionAsync("Scripts", required: false)
