--- a/src/Dotnet9.RazorPages/Pages/_ViewImports.cshtml
+++ b/src/Dotnet9.RazorPages/Pages/_ViewImports.cshtml
@@ -23,3 +23,4 @@
 @using Dotnet9.RazorPages.Models
 @using System.Runtime.InteropServices
 @using System.Reflection
+@using Dotnet9.WebShare.Services
