--- a/src/Dotnet9.BlazorWeb/Shared/MainLayout.razor
+++ b/src/Dotnet9.BlazorWeb/Shared/MainLayout.razor
@@ -40,7 +40,7 @@
                       Sm="8">
                     <MSheet MinHeight="@("70vh")"
                             Rounded="@("lg")">
-                        <!-- Your content -->
+                        @Body
                     </MSheet>
                 </MCol>
 
