--- a/src/Dotnet9.BlazorWeb/_Imports.razor
+++ b/src/Dotnet9.BlazorWeb/_Imports.razor
@@ -8,5 +8,7 @@
 @using BlazorComponent
 @using Masa.Blazor
 @using Dotnet9.BlazorWeb.Shared
-@using Dotnet9.WebShare.Services
 @using Dotnet9.Contracts.Dto
+@using Microsoft.AspNetCore.Mvc
+@using Dotnet9.Contracts.Dto.Tools
+@using Dotnet9.WebShare.Services
